--- a/index.html
+++ b/index.html
@@ -27,29 +27,16 @@
       gap: 0;
     }
     .form-col.left {
-      min-width: 300px;
+      min-width: 300px; /* 필요시 조정 */
       flex-basis: 48%;
     }
     .form-col.right {
       min-width: 300px;
       flex-basis: 48%;
     }
+
     .section, .date-section, .result-section, .contact-section { margin-bottom: 24px; }
     h1 { font-size: 1.18rem; font-weight: bold; text-align: center; margin-bottom: 24px; color: #14508e; letter-spacing: -1px;}
-
-    /* 견적 금액 박스 */
-    .result-section {
-      margin: 20px 0 17px 0;
-      padding: 13px 7px 8px 7px;
-      background: #f4f6fa;
-      border-radius: 12px;
-      text-align: center;
-      font-size: 1.05em;
-      color: #14508e;
-      font-weight: 600;
-      box-shadow: 0 2px 10px #8ab3d32c;
-      max-width: 100%;
-    }
     .result-section .result-title {
       font-size: 1.21em;
       font-weight: bold;
@@ -66,153 +53,68 @@
       font-weight: 700;
       color: #d02b2b;
       margin-left: 3px;
+      display: inline-block;
+    }
+
+    /* 숙박팩 가격 컬러 */
+    .room-price-blue { color: #1559d4 !important; font-weight: bold;}
+    .room-total-red { color: #d02b2b !important; font-weight: bold;}
+
+    /* 선택관광 인당 가격(파랑) */
+    .price-blue { color: #1559d4 !important; font-weight: bold; }
+
+    /* 전체 볼드화 */
+    .section-label-row, .option-title, .option-unit, .option-total, .toggle-btn,
+    .contact-label, .contact-input, .person-desc, label { font-weight: bold;}
+
+    /* 숙박팩 버튼 우측 정렬 (싱글룸/초기화) */
+    .section-label-row { display: flex; justify-content: space-between; align-items: center; }
+    .option-row { position: relative; }
+
+    /* 선택관광 -1명 버튼 위치 */
+    .option-controls { position: absolute; right: 12px; top: 10px; z-index:2; }
+    .option-minus-btn { font-size: 1em; padding: 4px 10px; border-radius:7px; background:#e9e7ff; color:#2857a3; border:1px solid #bdd2ea; cursor:pointer;}
+    .option-minus-btn:active { background:#c9e2ff;}
+
+    .option-total {
+      position: absolute;
+      right: 10px;
+      bottom: 9px;
+      color: #d02b2b;
+      font-size: 1.07em;
+      background: none; border: none; margin: 0; font-weight: bold;
+    }
+    /* 선택 안된 상태 인당 가격 파랑(PC) */
+    .option-unit.price-blue { color: #1559d4 !important; font-weight: bold;}
+
+    .contact-section {
+      background: #f9fafb !important;
+      border-radius: 12px !important;
+      padding: 12px 8px 7px 8px !important;
+      font-weight: bold;
+    }
+
+    /* 모바일에서 1단으로 변경 */
+    @media (max-width: 900px) {
+      .container { max-width: 99vw; padding: 7vw 2vw;}
+      .form-grid { flex-direction: column; gap: 0;}
+      .form-col.left, .form-col.right { flex-basis: 100%; min-width: 0;}
     }
     @media (max-width:700px) {
-      .result-section .result-title { font-size: 1.35em;}
-      .result-section .result-desc { font-size: 1.08em;}
-      .result-section .result-big { font-size: 1.8em;}
+      /* 소제목, 블록 등 크게 */
+      .section-label-row label, .date-label, .result-title { font-size: 1.35em !important; }
+      .option-title, .option-unit, .option-total, .toggle-btn { font-size: 1.11em !important; }
+      .section, .date-section, .result-section, .contact-section, .option-row { font-weight: bold; }
+      .option-row { min-height: 38px !important; font-size: 1em;}
+      .option-controls { right: 8px; top: 7px; }
+      .option-minus-btn { font-size: 1.16em !important; padding: 1px 11px !important;}
+      .option-total { font-size: 1.22em !important; bottom: 6px;}
+      /* 선택 전 인당 가격 폰트 */
+      .option-unit.price-blue { font-size: 1.1em !important; }
     }
-
-    /* 입력폼 (연락처) */
-    .contact-section {
-      margin-bottom: 20px;
-      background: #f9fafb;
-      border-radius: 12px;
-      padding: 18px 10px 12px 10px;
-      box-shadow: 0 2px 10px #d4e6f532;
-      border: 1.5px solid #e3eaf3;
-    }
-    .contact-label {
-      display: block;
-      margin: 10px 0 5px 2px;
-      color: #37629d;
-      font-size: 1.09em;
-      font-weight: 700;
-    }
-    .contact-input {
-      width: 100%;
-      padding: 8px 8px;
-      border: 1.4px solid #bfd2e9;
-      border-radius: 8px;
-      font-size: 1.07em;
-      margin-bottom: 3px;
-      box-sizing: border-box;
-      background: #f7fafc;
-      font-family: 'Pretendard', 'Noto Sans KR', Arial, sans-serif;
-      font-weight: 700;
-    }
-    textarea.contact-input { resize: vertical;}
-    .submit-btn {
-      display: block; width: 100%;
-      background: linear-gradient(90deg, #1466b6 88%, #25a6d1 100%);
-      color: #fff;
-      border: none;
-      border-radius: 12px;
-      padding: 13px 0;
-      font-size: 1.11em;
-      font-weight: 700;
-      margin-top: 22px;
-      cursor: pointer;
-      transition: background 0.15s;
-      letter-spacing: 0.5px;
-      box-shadow: 0 2px 10px #4176a72c;
-    }
-    .submit-btn:active { background: #2a8ad1;}
-
-    /* 섹션 타이틀/버튼 */
-    .section-label-row { display:flex; align-items:center; justify-content:space-between; margin-bottom:8px;}
-    .section label, .date-label, .section-label-row label { font-weight: 700; font-size: 1.08rem; color: #294a6b;}
-    .person-desc { color:#b04d0c; font-size:0.89em; margin-top:5px; margin-bottom:-12px; font-weight:600;}
-    .toggle-group { display: flex; gap: 7px; flex-wrap: wrap; margin-top: 7px;}
-    .toggle-btn { background: #f4f7fb; border: 1.2px solid #c5d4ee; border-radius: 10px; padding: 9px 0 7px 0; font-size: 1.01em; flex: 1 1 0; text-align: center; cursor: pointer; margin-bottom: 6px; min-width: 42px; transition: all 0.12s; position: relative; font-weight:800;}
-    .toggle-btn.selected { background: #296bb3; color: #fff; border-color: #14508e;}
-    .option-list { margin-top: 6px;}
-    /* 옵션블록 (선택관광/숙박) */
-    .option-row {
-      display: flex;
-      align-items: center;
-      background:#f4f7fb;
-      border:1px solid #d0deeb;
-      border-radius:10px;
-      padding: 9px 14px 9px 14px;
-      margin-bottom: 7px;
-      min-height:38px;
-      font-size:1.01em;
-      cursor:pointer;
-      transition:background .18s, color .18s;
-      font-weight:800;
-      position: relative;
-    }
-    .option-row.selected { background: #296bb3; color: #fff; border-color: #14508e;}
-    .option-title { font-size: 1.04em; flex:2; font-weight:800; display:flex; align-items:center; gap:4px;}
-    .option-unit { flex:1.5; font-size: 1.02em; color:#1559d4; text-align:center; font-weight:800;}
-    .option-row.selected .option-unit { color:#fff;}
-    .option-total { font-size: 1.15em; color:#e44237; font-weight:900; text-align:right; position:absolute; right:16px; bottom:8px;}
-    .option-row.selected .option-total { color: #ffe400; }
-    .option-controls {
-      display:flex;
-      align-items:center;
-      gap:8px;
-      position: absolute;
-      right: 12px;
-      top: 8px;
-      z-index:2;
-    }
-    .option-minus-btn {
-      background:#e9e7ff;
-      color:#2857a3;
-      border:1px solid #bdd2ea;
-      font-size:1.09em;
-      font-weight:800;
-      border-radius:7px;
-      padding:4px 13px;
-      cursor:pointer;
-      margin-bottom:2px;
-    }
-    .option-minus-btn:active {background:#c9e2ff;}
-
-    /* 숙박팩 가격 강조 */
-    .room-price-blue { color:#1559d4 !important; font-weight:800;}
-    .room-total-red { color:#e44237 !important; font-weight:900;}
-
-    .init-btn {
-      font-size:1em; background:#e5eefe; border:1px solid #bdd2ea;
-      border-radius:8px; color:#347; padding:4px 16px; cursor:pointer; margin-left:7px; font-weight:800;
-    }
-    .init-btn:hover {background:#d1e8ff;}
-    .room-single-btn {
-      background:#fff7e0; color:#b26c18; border:1px solid #edd59c;
-      font-size:1em; border-radius:7px; padding:4px 16px; margin-right:7px; cursor:pointer; font-weight:800;
-    }
-    .room-single-btn:active {background:#ffeec4;}
-
-    .date-section {margin-bottom:22px;}
-    .date-label {font-weight:700; color:#294a6b; font-size:1.13em; margin-bottom:10px; display:block;}
-    .date-input-wrap {display:flex; align-items:center; background:#f4f7fb; border-radius:10px; border:1.2px solid #c5d4ee; padding:12px 13px;}
-    .date-input {border:none; background:transparent; font-size:1em; color:#1849b9; flex:1;}
-    .date-input:focus {outline:none;}
-    .date-icon {font-size:1.2em; color:#14508e; margin-right:9px;}
-
-    /* 모바일 스타일 */
-    @media (max-width: 700px) {
-      h1 { font-size: 1.25rem;}
-      .section label, .date-label, .section-label-row label { font-size: 1.17rem !important;}
-      .toggle-btn { font-size: 1.05em; }
-      .option-row { font-size:1.10em; flex-direction:column; align-items:flex-start; gap:8px; padding: 9px 9px; min-height:36px;}
-      .option-unit { font-size: 1.11em;}
-      .option-total { font-size: 1.17em; right:13px; bottom:8px;}
-      .option-row.selected .option-total { color: #ffe400;}
-      .option-controls {
-        flex-direction:row; align-items:center;
-        position: absolute; right: 14px; top: 10px; z-index:2;
-      }
-      .option-minus-btn { font-size: 1.16em; padding:5px 14px;}
-      .init-btn, .room-single-btn {margin:0 0 0 8px; font-size:1.09em; padding:6px 18px;}
-      .section-label-row { flex-direction:row; align-items:center; gap:0;}
-    }
-    @media (max-width: 600px) {
-      html {font-size:14px;}
-    }
+    /* 숙박팩 - 객실 가격(파랑), 총가격(빨강) */
+    .room-price-blue { color: #1559d4 !important; font-weight: bold;}
+    .room-total-red { color: #d02b2b !important; font-weight: bold;}
   </style>
 </head>
 <body>
@@ -269,12 +171,12 @@
         <div class="option-list" id="roomList"></div>
       </div>
       <div class="result-section" id="resultSection">
-         <div class="result-title">빠른 견적 금액</div>
-         <div class="result-desc">(실제 견적과 상이할 수 있습니다.)</div>
-         계약금 (한국에서 입금하실 금액):
-         <span id="contractPrice" class="result-big"></span><br>
-         잔금 (현지에서 달러 지불하실 금액):
-         <span id="usdPrice" class="result-big"></span>
+        <div class="result-title">빠른 견적 금액</div>
+        <div class="result-desc">(실제 견적과 상이할 수 있습니다.)</div>
+        계약금 (한국에서 입금하실 금액): 
+        <span id="contractPrice" class="result-big"></span><br>
+        잔금 (현지에서 달러 지불하실 금액): 
+        <span id="usdPrice" class="result-big"></span>
       </div>
       <div class="contact-section">
         <label class="contact-label" for="contactName">대표자 성함 <span style="color:#d02b2b;">*</span></label>
@@ -312,8 +214,6 @@ const roomOptions = [
   {name: "4성급 3박", price: 159000},
   {name: "제가 예약할게요", price: 0}
 ];
-
-// 여행인원
 const personToggleGroup = document.getElementById("personToggleGroup");
 let personCount = 2;
 for(let i=2; i<=MAX_PERSON; i++) {
@@ -335,8 +235,6 @@ for(let i=2; i<=MAX_PERSON; i++) {
   }
   personToggleGroup.appendChild(btn);
 }
-
-// 가이드팩
 let guideType = "kr";
 let guidePrice = 220;
 document.querySelectorAll("#guideToggleGroup .toggle-btn").forEach(btn=>{
@@ -349,7 +247,6 @@ document.querySelectorAll("#guideToggleGroup .toggle-btn").forEach(btn=>{
     sendHeightToParent();
   }
 });
-
 // 선택관광(방비엥) 버튼화
 const vangviengList = document.getElementById("vangviengList");
 let vangviengChecked = Array(vangviengOptions.length).fill(false);
@@ -367,31 +264,25 @@ function renderVangviengList() {
       updateTotal();
       sendHeightToParent();
     };
-
-    // 제목
     const title = document.createElement("div");
     title.className = "option-title";
     title.innerText = opt.name;
     row.appendChild(title);
 
-    // 인당 가격
+    // 인당 가격(파랑, 미선택시)
     const unit = document.createElement("div");
-    unit.className = "option-unit";
+    unit.className = "option-unit" + (!vangviengChecked[idx] ? " price-blue" : "");
     if(vangviengChecked[idx]) {
-      unit.innerHTML = `$${opt.price} × ${vangviengPersons[idx]}명<br>$${vangviengPersons[idx]*opt.price}`;
-      unit.style.color = "";
+      unit.innerText = `$${opt.price} × ${vangviengPersons[idx]}명 = $${vangviengPersons[idx]*opt.price}`;
     } else {
-      unit.classList.add("price-blue");
-      unit.style.color = "#1559d4";
       unit.innerText = `$${opt.price}/인당`;
     }
     row.appendChild(unit);
 
-    // 총 가격/명, -1명 버튼
-    const controls = document.createElement("div");
-    controls.className = "option-controls";
+    // -1명 버튼, 총 가격
     if(vangviengChecked[idx]) {
-      // -1명 버튼 (우상단)
+      const controls = document.createElement("div");
+      controls.className = "option-controls";
       const minusBtn = document.createElement("button");
       minusBtn.type = "button";
       minusBtn.className = "option-minus-btn";
@@ -399,20 +290,18 @@ function renderVangviengList() {
       minusBtn.onclick = function(e){
         vangviengPersons[idx] = Math.max(0, vangviengPersons[idx]-1);
         if(vangviengPersons[idx]===0) vangviengChecked[idx]=false;
-        renderVangviengList();
-        updateTotal();
-        sendHeightToParent();
+        renderVangviengList(); updateTotal(); sendHeightToParent();
         e.stopPropagation();
       };
       controls.appendChild(minusBtn);
-      // 총 가격/명 (우측하단)
+      row.appendChild(controls);
+
       const total = document.createElement("div");
       total.className = "option-total";
       total.id = "vvTotal"+idx;
-      total.innerHTML = `$${vangviengPersons[idx]*opt.price} / 총 ${vangviengPersons[idx]}명`;
-      controls.appendChild(total);
+      total.innerText = `$${vangviengPersons[idx]*opt.price} / 총 ${vangviengPersons[idx]}명`;
+      row.appendChild(total);
     }
-    row.appendChild(controls);
     vangviengList.appendChild(row);
   });
 }
@@ -423,8 +312,7 @@ window.resetVangvieng = function(){
   updateTotal();
   sendHeightToParent();
 }
-
-// 선택관광(케어팩)
+// 선택관광(케어팩) 버튼화
 const careList = document.getElementById("careList");
 let careChecked = Array(careOptions.length).fill(false);
 let carePersons = Array(careOptions.length).fill(0);
@@ -441,31 +329,23 @@ function renderCareList() {
       updateTotal();
       sendHeightToParent();
     };
-
-    // 제목
     const title = document.createElement("div");
     title.className = "option-title";
     title.innerText = opt.name;
     row.appendChild(title);
 
-    // 인당 가격
     const unit = document.createElement("div");
-    unit.className = "option-unit";
+    unit.className = "option-unit" + (!careChecked[idx] ? " price-blue" : "");
     if(careChecked[idx]) {
-      unit.innerHTML = `$${opt.price} × ${carePersons[idx]}명<br>$${carePersons[idx]*opt.price}`;
-      unit.style.color = "";
+      unit.innerText = `$${opt.price} × ${carePersons[idx]}명 = $${carePersons[idx]*opt.price}`;
     } else {
-      unit.classList.add("price-blue");
-      unit.style.color = "#1559d4";
       unit.innerText = `$${opt.price}/인당`;
     }
     row.appendChild(unit);
 
-    // 총 가격/명, -1명 버튼
-    const controls = document.createElement("div");
-    controls.className = "option-controls";
     if(careChecked[idx]) {
-      // -1명 버튼 (우상단)
+      const controls = document.createElement("div");
+      controls.className = "option-controls";
       const minusBtn = document.createElement("button");
       minusBtn.type = "button";
       minusBtn.className = "option-minus-btn";
@@ -473,20 +353,18 @@ function renderCareList() {
       minusBtn.onclick = function(e){
         carePersons[idx] = Math.max(0, carePersons[idx]-1);
         if(carePersons[idx]===0) careChecked[idx]=false;
-        renderCareList();
-        updateTotal();
-        sendHeightToParent();
+        renderCareList(); updateTotal(); sendHeightToParent();
         e.stopPropagation();
       };
       controls.appendChild(minusBtn);
-      // 총 가격/명 (우측하단)
+      row.appendChild(controls);
+
       const total = document.createElement("div");
       total.className = "option-total";
       total.id = "careTotal"+idx;
-      total.innerHTML = `$${carePersons[idx]*opt.price} / 총 ${carePersons[idx]}명`;
-      controls.appendChild(total);
+      total.innerText = `$${carePersons[idx]*opt.price} / 총 ${carePersons[idx]}명`;
+      row.appendChild(total);
     }
-    row.appendChild(controls);
     careList.appendChild(row);
   });
 }
@@ -497,7 +375,6 @@ window.resetCare = function(){
   updateTotal();
   sendHeightToParent();
 }
-
 // 숙박팩(버튼화, 단일선택)
 const roomList = document.getElementById("roomList");
 let selectedRoomIdx = null;
@@ -520,22 +397,14 @@ function updateRoomList(){
       updateTotal();
       sendHeightToParent();
     };
-
-    // 제목
     const title = document.createElement("div");
     title.className = "option-title";
     title.innerText = opt.name;
-    // 가격
+    // 객실당 가격 (파랑)
     const unit = document.createElement("div");
-    unit.className = "option-unit";
-    if(selectedRoomIdx === idx) {
-      unit.innerText = opt.price === 0 ? "0원" : `${opt.price.toLocaleString()}원/객실`;
-      unit.className = "option-unit room-price-blue";
-    } else {
-      unit.className = "option-unit room-price-blue";
-      unit.innerText = opt.price === 0 ? "0원" : `${opt.price.toLocaleString()}원/객실`;
-    }
-    // 총 가격(빨간)
+    unit.className = "option-unit room-price-blue";
+    unit.innerText = opt.price === 0 ? "0원" : `${opt.price.toLocaleString()}원/객실`;
+    // 총 가격 (빨강)
     const total = document.createElement("div");
     total.className = "option-total room-total-red";
     total.id = "roomTotal"+idx;
@@ -563,7 +432,6 @@ window.resetSingleRoom = function(){
   updateTotal();
   sendHeightToParent();
 }
-
 function updateTotal(){
   let contract = personCount * 60000;
   let baseRoomCnt = Math.ceil(personCount/2);
@@ -583,7 +451,7 @@ renderVangviengList();
 renderCareList();
 updateRoomList();
 updateTotal();
-
+// 견적 전송 (EmailJS)
 function submitEstimate() {
   const travelDate = document.getElementById("travelDate").value.trim();
   if(!travelDate) { alert("여행일자를 선택해주세요."); document.getElementById("travelDate").focus(); return;}
@@ -620,7 +488,6 @@ function submitEstimate() {
     alert("견적 전송에 실패했습니다. 잠시 후 다시 시도해주세요.");
   });
 }
-
 // iframe 자동 높이 parent로 전달
 function sendHeightToParent() {
   if (window.parent !== window) {
