--- a/index.html
+++ b/index.html
@@ -2,22 +2,49 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>비방방 3박5일 C-Pack 상세 + 견적폼</title>
-  <meta name="viewport" content="width=600, user-scalable=no">
+  <title>라오스 비엔티안(1박) - 방비엥(2박) C-Pack 빠른견적</title>
+  <meta name="viewport" content="width=900, user-scalable=no">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    body { margin:0; background:#f8fbff; font-family:'Noto Sans KR', Arial,sans-serif; color:#232323;}
-    .container { max-width:850px; margin:0 auto; background:#fff; box-shadow:0 0 18px #0001; border-radius:18px; overflow:hidden; }
-    .form-grid { display: flex; flex-wrap: wrap; gap: 32px; }
-    .form-col { flex: 1 1 0; min-width: 0; display: flex; flex-direction: column; gap: 0; }
-    .form-col.left { min-width: 300px; flex-basis: 48%; }
-    .form-col.right { min-width: 300px; flex-basis: 48%; }
+    html { font-size:16px;}
+    body {
+      margin: 0;
+      background: #f8fbff;
+      font-family: 'Noto Sans KR', Arial, sans-serif;
+      color: #232323;
+      line-height: 1.45;
+    }
+    .container {
+      max-width: 980px; min-width:310px;
+      margin: 40px auto 48px auto;
+      background: #fff;
+      border-radius: 18px;
+      box-shadow: 0 0 18px #0001;
+      padding: 36px 42px 48px 42px;
+    }
+    @media (max-width:1050px){
+      .container { max-width:97vw; }
+    }
+    @media (max-width:700px){
+      .container { padding: 10px 2vw 24px 2vw; min-width:0; }
+      h1 { font-size:1.12em;}
+    }
+
+    h1 { font-size: 1.5rem; font-weight: bold; text-align: center; margin-bottom: 24px; color: #14508e; letter-spacing: -1px;}
+
+    .form-grid { display: flex; gap: 40px; align-items: flex-start;}
+    .form-col { flex: 1 1 0; min-width: 320px;}
+    @media (max-width:900px){
+      .form-grid { flex-direction: column; gap:18px;}
+      .form-col { min-width: 0;}
+    }
+    .section, .date-section, .result-section, .contact-section { margin-bottom: 26px; }
     .section-label-row { display:flex; align-items:center; justify-content:space-between; margin-bottom:8px;}
     .option-list { margin-top: 6px;}
-    .option-row { display: flex; align-items: center; justify-content: space-between; background:#f4f7fb; border:1px solid #d0deeb; border-radius:10px; padding: 11px 14px; margin-bottom: 7px; min-height:38px; font-size:1.07em; cursor:pointer; transition:background .18s, color .18s; font-weight:700; position:relative;}
+    .option-row { display: flex; align-items: center; justify-content: space-between; background:#f4f7fb; border:1px solid #d0deeb; border-radius:10px; padding: 13px 15px; margin-bottom: 9px; min-height:38px; font-size:1.11em; cursor:pointer; transition:background .18s, color .18s; font-weight:700; position:relative;}
     .option-row.selected { background: #296bb3; color: #fff; border-color: #14508e;}
     .option-title { font-size: 1.09em; flex:2;}
-    .option-unit { flex:1.9; font-size: 1.04em; color:#17508e; text-align:right; transition:color .15s; font-weight:700;
+    .option-unit { flex:1.9; font-size: 1.05em; color:#17508e; text-align:right; transition:color .15s; font-weight:700;
       display: flex !important; align-items: center; justify-content: flex-end; gap: 10px;}
     .option-row.selected .option-unit { color:#fff;}
     .option-row.selected .option-unit span { color: #fff !important;}
@@ -36,15 +63,45 @@
       vertical-align: middle;
     }
     .option-minus-btn:active { background: #c9e2ff; }
-    /* 플로팅 버튼 */
+    .toggle-group { display: flex; gap: 8px; flex-wrap: wrap; margin-top: 7px;}
+    .toggle-btn {
+      background: #f4f7fb;
+      border: 1.2px solid #c5d4ee;
+      border-radius: 10px;
+      padding: 11px 0 8px 0;
+      font-size: 1.07em;
+      flex: 1 1 0; min-width: 48px;
+      text-align: center; cursor: pointer; margin-bottom: 6px;
+      font-weight:700; transition:all 0.13s;
+    }
+    .toggle-btn.selected { background: #296bb3; color: #fff; border-color: #14508e;}
+    .person-desc { color:#b04d0c; font-size:0.99em; margin-top:7px; margin-bottom:-14px; font-weight:700;}
+    .room-single-btn {background:#fff7e0; color:#b26c18; border:1px solid #edd59c; font-size:1em; border-radius:7px; padding:7px 18px; margin-right:7px; cursor:pointer;}
+    .room-single-btn:active {background:#ffeec4;}
+    .init-btn { font-size:1em; background:#e5eefe; border:1px solid #bdd2ea; border-radius:8px; color:#347; padding:7px 15px; cursor:pointer; margin-left:0;}
+    .init-btn:hover {background:#d1e8ff;}
+    .result-section { margin: 20px 0 17px 0; padding: 13px 7px 8px 7px; background: #f4f6fa; border-radius: 12px; text-align: center; font-size: 1.07em; color: #14508e; font-weight: 600;}
+    .result-title { font-size: 1.23em; font-weight: bold; color: #17508e; margin-bottom: 2px;}
+    .result-desc { font-size: 0.97em; color: #989898; margin-bottom: 11px;}
+    .result-big { font-size: 1.32em; font-weight: 700; color: #d02b2b; margin-left: 3px;}
+    .contact-section { margin-bottom: 20px; background: #f9fafb; border-radius: 12px; padding: 12px 8px 7px 8px;}
+    .contact-label { display: block; margin: 10px 0 5px 2px; color: #37629d; font-size: 1.09em; font-weight: 700;}
+    .contact-input { width: 100%; padding: 8px 8px; border: 1px solid #bfd2e9; border-radius: 8px; font-size: 1.04em; margin-bottom: 3px; box-sizing: border-box; background: #f7fafc; font-family: 'Noto Sans KR', Arial, sans-serif; font-weight:700;}
+    textarea.contact-input { resize: vertical;}
+    .submit-btn { display: block; width: 100%; background: linear-gradient(90deg, #1466b6 88%, #25a6d1 100%); color: #fff; border: none; border-radius: 12px; padding: 15px 0; font-size: 1.12em; font-weight: 800; margin-top: 22px; cursor: pointer; transition: background 0.15s; letter-spacing: 0.5px; box-shadow: 0 2px 10px #4176a72c;}
+    .submit-btn:active { background: #2a8ad1;}
+    /* 플로팅 버튼 중앙 고정 */
     .floating-buttons {
       position: fixed;
-      right: 40px;
+      left: 50%;
+      transform: translateX(-50%);
       bottom: 36px;
       display: flex;
       flex-direction: column;
       gap: 16px;
       z-index: 2000;
+      width: fit-content;
+      align-items: center;
     }
     .float-btn {
       min-width: 260px;
@@ -70,9 +127,10 @@
     }
     .float-btn:hover { filter: brightness(0.92);}
     @media (max-width:700px){
-      .container { padding:8px;}
-      .floating-buttons { right: 12px; bottom: 15px;}
+      .container { padding:8px; }
+      .floating-buttons { left: 50%; transform: translateX(-50%); bottom: 11px; }
       .float-btn { min-width: 150px; font-size: 1.02em; padding: 14px 0 10px 0;}
+      .form-grid { gap: 2vw;}
     }
   </style>
 </head>
@@ -142,12 +200,11 @@
       </div>
     </div>
   </div>
-  <!-- 플로팅 버튼 시작 -->
+  <!-- 중앙 플로팅 버튼 -->
   <div class="floating-buttons">
     <a href="#cpack-quickform" class="float-btn estimate-btn">즉시 견적</a>
     <a href="https://pf.kakao.com/_XXXXXX" target="_blank" class="float-btn kakao-btn">카카오 채널 즉시 상담</a>
   </div>
-  <!-- 플로팅 버튼 끝 -->
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <script>
     (function(){ emailjs.init('luKxEKdyyvY4hjYfo'); })();
