--- a/index.html
+++ b/index.html
@@ -3,38 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <title>라오스 비엔티안(1박) - 방비엥(2박) C-Pack 빠른견적</title>
-  <meta name="viewport" content="width=900, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    html { font-size:16px;}
-    body {
-      margin: 0;
-      background: #f8fbff;
-      font-family: 'Noto Sans KR', Arial, sans-serif;
-      color: #232323;
-      line-height: 1.45;
-    }
+    html, body { margin: 0; padding: 0; background: #f8fbff; font-family: 'Noto Sans KR', Arial, sans-serif; color: #232323; }
+    body { min-width: 0; }
     .container {
-      max-width: 980px; min-width:310px;
-      margin: 40px auto 48px auto;
+      max-width: 980px; min-width: 320px; width: 100%;
+      margin: 36px auto 36px auto;
       background: #fff;
       border-radius: 18px;
       box-shadow: 0 0 18px #0001;
-      padding: 36px 42px 48px 42px;
+      padding: 36px 32px 48px 32px;
+      box-sizing: border-box;
     }
-    @media (max-width:1050px){
-      .container { max-width:97vw; }
-    }
-    @media (max-width:700px){
-      .container { padding: 10px 2vw 24px 2vw; min-width:0; }
-      h1 { font-size:1.12em;}
-    }
-
-    h1 { font-size: 1.5rem; font-weight: bold; text-align: center; margin-bottom: 24px; color: #14508e; letter-spacing: -1px;}
-
+    h1 { font-size: 1.45rem; font-weight: bold; text-align: center; margin-bottom: 28px; color: #14508e; letter-spacing: -1px;}
     .form-grid { display: flex; gap: 40px; align-items: flex-start;}
-    .form-col { flex: 1 1 0; min-width: 320px;}
+    .form-col { flex: 1 1 0; min-width: 310px;}
     @media (max-width:900px){
+      .container { max-width:97vw; padding: 10px 2vw 28px 2vw; }
       .form-grid { flex-direction: column; gap:18px;}
       .form-col { min-width: 0;}
     }
@@ -49,20 +36,22 @@
     .option-row.selected .option-unit { color:#fff;}
     .option-row.selected .option-unit span { color: #fff !important;}
     .option-minus-btn {
-      background: #f3f3fe;
+      background: #ececff;
       color: #2857a3;
       border: 1px solid #bdd2ea;
       font-size: 1em;
       font-weight: 700;
-      border-radius: 8px;
-      padding: 6px 18px;
+      border-radius: 13px;
+      padding: 7px 17px 7px 17px;
       cursor: pointer;
-      margin-left: 10px;
+      margin-left: 12px;
       box-shadow: 0 1px 5px #b9cbe833;
       display: inline-block;
       vertical-align: middle;
+      white-space: nowrap;
+      line-height: 1.2;
     }
-    .option-minus-btn:active { background: #c9e2ff; }
+    .option-minus-btn:active { background: #d9e8ff; }
     .toggle-group { display: flex; gap: 8px; flex-wrap: wrap; margin-top: 7px;}
     .toggle-btn {
       background: #f4f7fb;
@@ -90,46 +79,8 @@
     textarea.contact-input { resize: vertical;}
     .submit-btn { display: block; width: 100%; background: linear-gradient(90deg, #1466b6 88%, #25a6d1 100%); color: #fff; border: none; border-radius: 12px; padding: 15px 0; font-size: 1.12em; font-weight: 800; margin-top: 22px; cursor: pointer; transition: background 0.15s; letter-spacing: 0.5px; box-shadow: 0 2px 10px #4176a72c;}
     .submit-btn:active { background: #2a8ad1;}
-    /* 플로팅 버튼 중앙 고정 */
-    .floating-buttons {
-      position: fixed;
-      left: 50%;
-      transform: translateX(-50%);
-      bottom: 36px;
-      display: flex;
-      flex-direction: column;
-      gap: 16px;
-      z-index: 2000;
-      width: fit-content;
-      align-items: center;
-    }
-    .float-btn {
-      min-width: 260px;
-      padding: 23px 0 18px 0;
-      border: none;
-      border-radius: 50px;
-      font-size: 1.25em;
-      font-weight: 700;
-      text-align: center;
-      box-shadow: 0 3px 18px #296bb337;
-      cursor: pointer;
-      transition: filter 0.17s;
-      display: block;
-      text-decoration: none;
-    }
-    .estimate-btn {
-      background: linear-gradient(90deg, #1766b7 70%, #23a0e3 100%);
-      color: #fff;
-    }
-    .kakao-btn {
-      background: #ffe500;
-      color: #222;
-    }
-    .float-btn:hover { filter: brightness(0.92);}
     @media (max-width:700px){
-      .container { padding:8px; }
-      .floating-buttons { left: 50%; transform: translateX(-50%); bottom: 11px; }
-      .float-btn { min-width: 150px; font-size: 1.02em; padding: 14px 0 10px 0;}
+      .container { padding: 7px 0.7vw 22px 0.7vw; }
       .form-grid { gap: 2vw;}
     }
   </style>
@@ -199,11 +150,6 @@
         <button class="submit-btn" onclick="submitEstimate()">빠른 견적 보내기</button>
       </div>
     </div>
-  </div>
-  <!-- 중앙 플로팅 버튼 -->
-  <div class="floating-buttons">
-    <a href="#cpack-quickform" class="float-btn estimate-btn">즉시 견적</a>
-    <a href="https://pf.kakao.com/_XXXXXX" target="_blank" class="float-btn kakao-btn">카카오 채널 즉시 상담</a>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <script>
@@ -416,7 +362,7 @@
             const minusBtn = document.createElement("button");
             minusBtn.type = "button";
             minusBtn.className = "option-minus-btn";
-            minusBtn.innerText = "-1방";
+            minusBtn.innerHTML = `<span>-1방</span>`;
             minusBtn.onclick = function(e){
               if(singleRoomAdd > 0) singleRoomAdd--;
               updateRoomList();
