--- a/index.html
+++ b/index.html
@@ -446,6 +446,7 @@ updateTotal();
 
 // EmailJS 견적 전송
 function submitEstimate() {
+   const productTitle = document.querySelector("h1").innerText.trim(); // 추가
   const travelDate = document.getElementById("travelDate").value.trim();
   if(!travelDate) { alert("여행일자를 선택해주세요."); document.getElementById("travelDate").focus(); return;}
   const name = document.getElementById("contactName").value.trim();
@@ -464,6 +465,7 @@ function submitEstimate() {
   let contract = document.getElementById("contractPrice").innerText;
   let usd = document.getElementById("usdPrice").innerText;
   emailjs.send('service_e6uns2x', 'template_hhk1zot', {
+        product_title: productTitle,    // 추가
     travel_date: travelDate,
     name: name,
     phone: phone,
